--- a/index.html
+++ b/index.html
@@ -1,177 +1,3 @@
-<!DOCTYPE html>
-<html lang="zh-CN">
-<head>
-<meta charset="UTF-8">
-<title>入口页面</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<style>
-/* ===== 基础 ===== */
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial;
-}
-
-html, body {
-    height: 100%;
-}
-
-/* ===== 真正固定的背景层（关键） ===== */
-.bg-fixed {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: url("https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEOBihpSnaU9ZjQox6JC-0Oc-FuIVEdtQACXiQAAig5UFZycS_RPNVMQTYE.jpeg")
-        no-repeat center center;
-    background-size: cover;
-    z-index: -2;
-}
-
-/* ===== 轻遮罩层 ===== */
-.overlay {
-    min-height: 100vh;
-    background: linear-gradient(
-        rgba(0,0,0,0.25),
-        rgba(0,0,0,0.45)
-    );
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 14vh;
-    z-index: 1;
-}
-
-/* ===== 波浪入场动画 ===== */
-@keyframes waveIn {
-    0% {
-        opacity: 0;
-        transform: translateY(40px);
-        clip-path: ellipse(60% 0% at 50% 0%);
-    }
-    100% {
-        opacity: 1;
-        transform: translateY(0);
-        clip-path: ellipse(120% 120% at 50% 50%);
-    }
-}
-
-/* ===== 内容区（无卡片） ===== */
-.container {
-    width: 90%;
-    max-width: 420px;
-    text-align: center;
-    animation: waveIn 0.9s ease-out forwards;
-}
-
-/* ===== 标题 ===== */
-.title {
-    font-size: 22px;
-    font-weight: 600;
-    color: #ffffff;
-    margin-bottom: 6px;
-}
-
-.subtitle {
-    font-size: 14px;
-    color: rgba(255,255,255,0.75);
-    margin-bottom: 28px;
-}
-
-/* ===== 高级按钮 ===== */
-.btn {
-    display: block;
-    width: 100%;
-    padding: 15px 0;
-    margin-bottom: 16px;
-    text-decoration: none;
-    font-size: 16px;
-    font-weight: 500;
-    color: #ffffff;
-    border-radius: 14px;
-    box-shadow: 0 10px 28px rgba(0,0,0,0.35);
-    transition: all 0.3s ease;
-}
-
-.btn:hover {
-    transform: translateY(-3px);
-    box-shadow: 0 16px 36px rgba(0,0,0,0.45);
-}
-
-/* ===== 按钮配色 ===== */
-.btn-a {
-    background: linear-gradient(
-        135deg,
-        rgba(60, 90, 140, 0.9),
-        rgba(40, 60, 100, 0.9)
-    );
-}
-
-.btn-b {
-    background: linear-gradient(
-        135deg,
-        rgba(90, 70, 120, 0.9),
-        rgba(60, 45, 90, 0.9)
-    );
-}
-
-/* ===== 底部图片 ===== */
-.image-link {
-    width: 90%;
-    max-width: 420px;
-    margin-top: 32px;
-}
-
-.image-link img {
-    width: 100%;
-    border-radius: 18px;
-    transition: transform 0.35s ease, box-shadow 0.35s ease;
-}
-
-.image-link img:hover {
-    transform: scale(1.04);
-    box-shadow: 0 16px 36px rgba(0,0,0,0.45);
-}
-
-/* ===== 移动端 ===== */
-@media (max-width: 480px) {
-    .title {
-        font-size: 20px;
-    }
-}
-</style>
-</head>
-
-<body>
-
-<!-- 真正固定的背景 -->
-<div class="bg-fixed"></div>
-
-<div class="overlay">
-
-    <div class="container">
-        <div class="title">请选择入口</div>
-        <div class="subtitle">本站仅提供跳转服务</div>
-
-        <a href="https://law-cos.rednet.cn/2025-12/23/43c602cd7a90751b5e8e14625edc3362.jpeg?ldk=wS0zRM6dEk2" class="btn btn-a" target="_blank">
-            精品一区
-        </a>
-
-        <a href="https://pic.huodongjia.com/postevent/2025-09-13/1757692977.17.html#/?code=adeq33" class="btn btn-a" target="_blank">
-            精品二区
-        </a>
-    </div>
-
-    <div class="image-link">
-        <a href="https://ok.falff.com/campaign/13" target="_blank">
-            <img src="https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEOBjBpSnl6nZMxxpPqvuNpg9N0fp6_NAACbyQAAig5UFb5UyyXLQaozTYE.jpeg" alt="点击跳转">
-        </a>
-    </div>
-
-</div>
-
-</body>
-</html>
+<a href="https://kco7338.top" target="_blank">
+  点击在浏览器中打开
+</a>
