--- a/index.html
+++ b/index.html
@@ -1,3 +1,164 @@
-<a href="https://kco7338.top" target="_blank">
-  点击在浏览器中打开
-</a>
+<!DOCTYPE html>
+<html lang="zh">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>有趣的网站</title>
+    <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+        }
+
+        .background {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-image: url('https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEM4EJpQsTFYXU7N-6646pMpCMOEbGKHQAC8x4AAljPGVYyaprjjrTSEDYE.jpeg');
+            background-size: cover;
+            background-position: center;
+            z-index: -1;
+        }
+
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding: 0;
+            color: white;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: center;
+        }
+
+        h1 {
+            color: #fff;
+            margin-top: 10px;
+            margin-bottom: 0;
+            font-size: 36px;
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
+        }
+
+        .top-small-text {
+            font-size: 16px;
+            margin-top: 0;
+            margin-bottom: 6px;
+        }
+
+        .sub-text {
+            color: #FFD700;
+            font-size: 16px;
+            margin-top: 10px;
+            font-style: italic;
+            letter-spacing: 1px;
+        }
+
+        .button-container {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            width: 100%;
+            max-width: 900px;
+            margin-top: 30px;
+            margin-bottom: 20px;
+            justify-content: center;
+        }
+
+        .button {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            color: white;
+            padding: 15px 20px;
+            width: calc(50% - 10px);
+            font-size: 20px;
+            border-radius: 12px;
+            opacity: 0.92;
+            cursor: pointer;
+            box-sizing: border-box;
+            transition: transform 0.15s ease, opacity 0.15s ease;
+        }
+
+        .button:hover {
+            opacity: 1;
+            transform: translateY(-2px);
+        }
+
+        /* ===== 鲜艳高区分按钮颜色 ===== */
+        .button1 { background: linear-gradient(135deg, #3f51ff, #7c4dff); }
+        .button2 { background: linear-gradient(135deg, #00c853, #64dd17); }
+        .button3 { background: linear-gradient(135deg, #ff9100, #ff6d00); }
+        .button4 { background: linear-gradient(135deg, #d500f9, #ff1744); }
+        .button5 { background: linear-gradient(135deg, #ffd600, #ffab00); color:#000; }
+        .button6 { background: linear-gradient(135deg, #00bcd4, #0091ea); }
+
+        .go-text {
+            font-size: 14px;
+            font-style: italic;
+        }
+
+        .go-green {
+            color: #00ff7f;
+        }
+
+        .qq-group-btn {
+            position: fixed;
+            left: 20px;
+            bottom: 20px;
+            width: 60px;
+            height: 60px;
+            background-color: #12B7F5;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            z-index: 9999;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.4);
+            transition: transform 0.2s ease, opacity 0.2s ease;
+            color: #fff;
+            font-size: 16px;
+            font-weight: bold;
+        }
+
+        .qq-group-btn:hover {
+            transform: scale(1.05);
+            opacity: 0.95;
+        }
+    </style>
+</head>
+<body>
+
+<div class="background"></div>
+
+<h1>永久总站</h1>
+<p class="top-small-text">备用地址:333ccc·cc</p>
+
+<p class="sub-text">遇到通道打不开的情况更换浏览器访问本站即可<br>推荐使用QQ浏览器！</p>
+
+<div class="button-container">
+    <div class="button button1" data-url="http://6e8e.cc"><span>2号通道</span><span class="go-text">异常勿下</span></div>
+    <div class="button button2" data-url="http://47xxus0sn.xagqh.cn/Mr79BrK9Yh"><span>1号通道</span><span class="go-text">正常</span></div>
+    <div class="button button3" data-url="http://g62k.ridxrcm.cn/?Oid=c2Rtcmkwbm4"><span>4号通道</span><span class="go-text">正常</span></div>
+    <div class="button button4" data-url="http://chaxun.ccpiteco.net/?NVYtW&yi=ertgrvjfsuwooecqfx"><span>3号通道</span><span class="go-text">正常</span></div>
+    <div class="button button5" data-url="https://eeewww514qq-bit.github.io/im.qq.com"><span>勉费白嫖</span><span class="go-text">正常</span></div>
+    <div class="button button6" data-url="https://cdn.auoktalk.com/1765305207_9a98847a3077bb8d026152b20018639f?code=ufbq75"><span>5号通道</span><span class="go-text">正常</span></div>
+</div>
+
+<div class="qq-group-btn" id="qqGroupBtn">QQ群</div>
+
+<script>
+    document.addEventListener('contextmenu', e => e.preventDefault());
+    document.querySelectorAll('.button').forEach(btn => {
+        btn.onclick = () => window.open(btn.dataset.url, '_blank');
+    });
+    document.getElementById('qqGroupBtn').onclick = function () {
+        window.open('http://www.930.mom', '_blank');
+    };
+</script>
+
+</body>
+</html>
