--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     rgba(0, 0, 0, 0.55),
                     rgba(0, 0, 0, 0.75)
                 ),
-                url("bg.jpg");
+                url("https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEOHY1pTFV8HQV4VQZzdlqitp4g7Cn54QACYCcAAqnnYVZoKqoUIlufsTYE.jpeg");
 
             background-size: cover;
             background-position: center;
