--- a/index.html
+++ b/index.html
@@ -14,19 +14,22 @@
             font-family: Arial, sans-serif;
             text-align: center;
             padding: 0;
-            color: #ffe6e6;
+            color: #f5d9e2;
             min-height: 100vh;
             display: flex;
             flex-direction: column;
             justify-content: flex-start;
             align-items: center;
 
-            /* ===== 红灯区霓虹背景 ===== */
+            /* ===== 夜晚低光 + 霓虹背景 ===== */
             background-image:
+                linear-gradient(
+                    rgba(0, 0, 0, 0.75),
+                    rgba(20, 0, 20, 0.85)
+                ),
                 radial-gradient(
                     circle at top,
-                    rgba(255, 60, 120, 0.45),
-                    rgba(120, 0, 40, 0.75),
+                    rgba(255, 0, 90, 0.25),
                     rgba(0, 0, 0, 0.9)
                 ),
                 url("https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEOHY1pTFV8HQV4VQZzdlqitp4g7Cn54QACYCcAAqnnYVZoKqoUIlufsTYE.jpeg");
@@ -38,13 +41,13 @@
         }
 
         h1 {
-            margin-top: 12px;
+            margin-top: 14px;
             font-size: 36px;
-            color: #ff4d6d;
+            color: #ff2f6d;
             text-shadow:
-                0 0 6px rgba(255, 77, 109, 0.8),
+                0 0 6px rgba(255, 50, 110, 0.9),
                 0 0 18px rgba(255, 0, 80, 0.6),
-                2px 2px 10px rgba(0, 0, 0, 0.9);
+                0 0 36px rgba(255, 0, 80, 0.3);
         }
 
         .button-container {
@@ -53,17 +56,17 @@
             gap: 12px;
             width: 100%;
             max-width: 400px;
-            margin-top: 30px;
+            margin-top: 32px;
             margin-bottom: 20px;
         }
 
         .button-label {
             font-size: 12px;
-            color: #ffb3c6;
+            color: #ff9ab3;
             margin: 0;
             padding: 0;
-            opacity: 0.9;
-            text-shadow: 0 0 6px rgba(255, 80, 120, 0.6);
+            opacity: 0.85;
+            text-shadow: 0 0 6px rgba(255, 60, 120, 0.6);
         }
 
         .button {
@@ -78,7 +81,7 @@
             text-align: left;
             font-size: 20px;
             border-radius: 16px;
-            transition: all 0.3s ease;
+            transition: all 0.35s ease;
             opacity: 0.95;
             user-select: none;
             cursor: pointer;
@@ -86,10 +89,11 @@
             padding-left: 20px;
             padding-right: 20px;
 
-            backdrop-filter: blur(6px);
+            backdrop-filter: blur(8px);
             box-shadow:
-                0 0 12px rgba(255, 0, 80, 0.35),
-                0 10px 30px rgba(0, 0, 0, 0.7);
+                0 0 10px rgba(255, 0, 90, 0.35),
+                0 0 22px rgba(255, 0, 120, 0.2),
+                0 12px 30px rgba(0, 0, 0, 0.85);
             text-shadow: 0 0 6px rgba(255, 120, 160, 0.8);
         }
 
@@ -97,24 +101,25 @@
             opacity: 1;
             transform: translateY(-2px);
             box-shadow:
-                0 0 18px rgba(255, 0, 100, 0.7),
-                0 14px 36px rgba(0, 0, 0, 0.85);
+                0 0 18px rgba(255, 0, 120, 0.8),
+                0 0 36px rgba(255, 0, 120, 0.4),
+                0 16px 40px rgba(0, 0, 0, 0.9);
         }
 
-        /* ===== 红灯区按钮配色 ===== */
+        /* ===== 霓虹按钮色 ===== */
         .button1 {
             background: linear-gradient(
                 135deg,
-                rgba(180, 0, 80, 0.9),
-                rgba(120, 0, 120, 0.9)
+                rgba(140, 0, 90, 0.85),
+                rgba(90, 0, 120, 0.85)
             );
         }
 
         .button2 {
             background: linear-gradient(
                 135deg,
-                rgba(220, 40, 90, 0.9),
-                rgba(140, 0, 40, 0.9)
+                rgba(180, 20, 80, 0.85),
+                rgba(90, 0, 40, 0.85)
             );
         }
 
@@ -122,8 +127,10 @@
             font-size: 14px;
             font-style: italic;
             letter-spacing: 1px;
-            color: #ffd6e0;
-            text-shadow: 0 0 6px rgba(255, 80, 120, 0.9);
+            color: #ffd1dc;
+            text-shadow:
+                0 0 6px rgba(255, 80, 140, 0.9),
+                0 0 14px rgba(255, 0, 100, 0.6);
         }
 
         .hidden {
