--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         }
 
         body {
+            position: relative;
+            overflow-x: hidden;
+
             font-family: Arial, sans-serif;
             text-align: center;
             padding: 0;
@@ -20,24 +23,60 @@
             flex-direction: column;
             justify-content: flex-start;
             align-items: center;
+        }
 
-            /* ===== 默认：电脑端更暗 ===== */
-            background-image:
-                linear-gradient(
-                    rgba(0, 0, 0, 0.8),
-                    rgba(10, 0, 15, 0.9)
-                ),
-                radial-gradient(
-                    circle at top,
-                    rgba(255, 0, 90, 0.18),
-                    rgba(0, 0, 0, 0.95)
-                ),
-                url("https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEOHY1pTFV8HQV4VQZzdlqitp4g7Cn54QACYCcAAqnnYVZoKqoUIlufsTYE.jpeg");
+        /* ===============================
+           📱 手机端固定背景（核心）
+        =============================== */
+        @media (max-width: 768px) {
+            body::before {
+                content: "";
+                position: fixed;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                z-index: -1;
 
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
+                background-image:
+                    linear-gradient(
+                        rgba(0, 0, 0, 0.55),
+                        rgba(20, 0, 20, 0.7)
+                    ),
+                    radial-gradient(
+                        circle at top,
+                        rgba(255, 0, 120, 0.4),
+                        rgba(0, 0, 0, 0.9)
+                    ),
+                    url("https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEOHY1pTFV8HQV4VQZzdlqitp4g7Cn54QACYCcAAqnnYVZoKqoUIlufsTYE.jpeg");
+
+                background-size: cover;
+                background-position: center;
+                background-repeat: no-repeat;
+            }
+        }
+
+        /* ===============================
+           💻 电脑端背景（普通）
+        =============================== */
+        @media (min-width: 769px) {
+            body {
+                background-image:
+                    linear-gradient(
+                        rgba(0, 0, 0, 0.8),
+                        rgba(10, 0, 15, 0.9)
+                    ),
+                    radial-gradient(
+                        circle at top,
+                        rgba(255, 0, 90, 0.18),
+                        rgba(0, 0, 0, 0.95)
+                    ),
+                    url("https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEOHY1pTFV8HQV4VQZzdlqitp4g7Cn54QACYCcAAqnnYVZoKqoUIlufsTYE.jpeg");
+
+                background-size: cover;
+                background-position: center;
+                background-repeat: no-repeat;
+            }
         }
 
         h1 {
@@ -45,8 +84,8 @@
             font-size: 36px;
             color: #ff2f6d;
             text-shadow:
-                0 0 6px rgba(255, 50, 110, 0.7),
-                0 0 14px rgba(255, 0, 80, 0.4);
+                0 0 10px rgba(255, 50, 120, 1),
+                0 0 26px rgba(255, 0, 100, 0.9);
         }
 
         .button-container {
@@ -62,8 +101,8 @@
         .button-label {
             font-size: 12px;
             color: #ff9ab3;
-            opacity: 0.85;
-            text-shadow: 0 0 4px rgba(255, 60, 120, 0.5);
+            opacity: 0.9;
+            text-shadow: 0 0 6px rgba(255, 60, 120, 0.6);
         }
 
         .button {
@@ -85,9 +124,10 @@
 
             backdrop-filter: blur(8px);
             box-shadow:
-                0 0 8px rgba(255, 0, 90, 0.25),
-                0 10px 28px rgba(0, 0, 0, 0.85);
-            text-shadow: 0 0 5px rgba(255, 120, 160, 0.6);
+                0 0 14px rgba(255, 0, 120, 0.8),
+                0 0 28px rgba(255, 0, 120, 0.5),
+                0 14px 34px rgba(0, 0, 0, 0.9);
+            text-shadow: 0 0 6px rgba(255, 120, 160, 0.8);
         }
 
         .button:hover {
@@ -115,43 +155,9 @@
             font-size: 14px;
             font-style: italic;
             color: #ffd1dc;
-            text-shadow: 0 0 6px rgba(255, 80, 140, 0.6);
-        }
-
-        /* ===== 📱 手机端：霓虹更亮 ===== */
-        @media (max-width: 768px) {
-            body {
-                background-image:
-                    linear-gradient(
-                        rgba(0, 0, 0, 0.55),
-                        rgba(20, 0, 20, 0.7)
-                    ),
-                    radial-gradient(
-                        circle at top,
-                        rgba(255, 0, 120, 0.35),
-                        rgba(0, 0, 0, 0.85)
-                    ),
-                    url("https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEOHY1pTFV8HQV4VQZzdlqitp4g7Cn54QACYCcAAqnnYVZoKqoUIlufsTYE.jpeg");
-            }
-
-            h1 {
-                text-shadow:
-                    0 0 10px rgba(255, 50, 120, 1),
-                    0 0 26px rgba(255, 0, 100, 0.9);
-            }
-
-            .button {
-                box-shadow:
-                    0 0 14px rgba(255, 0, 120, 0.8),
-                    0 0 28px rgba(255, 0, 120, 0.5),
-                    0 14px 34px rgba(0, 0, 0, 0.9);
-            }
-
-            .go-text {
-                text-shadow:
-                    0 0 10px rgba(255, 80, 160, 1),
-                    0 0 20px rgba(255, 0, 120, 0.8);
-            }
+            text-shadow:
+                0 0 10px rgba(255, 80, 160, 1),
+                0 0 20px rgba(255, 0, 120, 0.8);
         }
     </style>
 </head>
