--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ h1 {
     border-radius: 12px;
     font-size: 20px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center; /* 居中显示 */
     align-items: center;
     color: #fff;
     text-decoration: none;
@@ -89,13 +89,6 @@ h1 {
 .button4 { background: linear-gradient(135deg,#d500f9,#ff1744); box-shadow:0 0 8px rgba(255,255,255,.35);}
 .button5 { background: linear-gradient(135deg,#ffd600,#ffab00); box-shadow:0 0 8px rgba(255,255,255,.35);}
 .button6 { background: linear-gradient(135deg,#2b2b2b,#6a6a6a,#2b2b2b); box-shadow:0 0 8px rgba(255,255,255,.35);}
-
-.go-text {
-    font-size: 14px;
-    font-style: italic;
-}
-
-.button1 .go-text { color: #FFD700; }
 
 /* ===== 已优化的 QQ / 联系方式按钮 ===== */
 .qq-group-btn {
@@ -117,34 +110,41 @@ h1 {
 
 <h1>学习资料导航</h1>
 <p class="top-small-text">第三方学习资源索引页</p>
+
 <p class="sub-text">
 包天以上请妥善保存账号信息<br>
 避免学习进度丢失
 </p>
+
+<div class="notice">
+本站仅提供第三方学习资源的整理与导航，内容由外部站点提供。<br>
+如遇访问异常，请复制链接并在浏览器中打开，自行判断安全性。
+</div>
+
 <div class="button-container">
 
 <a class="button button1" href="http://6e8e.cc" target="_blank" rel="noopener">
-<span>学习站点 A</span><span class="go-text">GO</span>
+学习站点2
 </a>
 
 <a class="button button2" href="http://47xxus0sn.xagqh.cn/Mr79BrK9Yh" target="_blank" rel="noopener">
-<span>学习站点 B</span><span class="go-text">GO</span>
+学习站点1
 </a>
 
 <a class="button button3" href="http://g62k.ridxrcm.cn/?Oid=c2Rtcmkwbm4" target="_blank" rel="noopener">
-<span>学习站点 C</span><span class="go-text">GO</span>
+学习站点4
 </a>
 
 <a class="button button4" href="http://IjaMWExiyP.e.haijiacp.com/?NXVsb&La=fqhjjqxcicvsqtddnu" target="_blank" rel="noopener">
-<span>学习站点 D</span><span class="go-text">GO</span>
+学习站点3
 </a>
 
 <a class="button button5" href="https://1busin-ebsoo-19cos.cyou" target="_blank" rel="noopener">
-<span>免费学习资源</span><span class="go-text">GO</span>
+免费学习资料
 </a>
 
 <a class="button button6" href="https://cdn.auoktalk.com/1765305207_9a98847a3077bb8d026152b20018639f?code=ufbq75" target="_blank" rel="noopener">
-<span>学习资料下载</span><span class="go-text">GO</span>
+学习站点5
 </a>
 
 </div>
